# email-sync-rs

./: Cargo.toml  README.md
src/: lib.rs  mailbox.rs  main.rs  session.rs  utils.rs
